--- a/user-directory/src/components/form.css
+++ b/user-directory/src/components/form.css
@@ -4,6 +4,9 @@
     flex-direction: column;
     align-items: center;
 }
+.new-user-form h1 {
+    color: white;
+}
 
 .form-name {
     display: flex;
